--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <button id="toggle-fullpage-1">Toggle Full Page</button>
             </div>
             <div class="label-container">
-                <p class="image-label">Lucio Piccinino, <i>Armour of Alfonso II D’Este, Duke of Ferrara</i>, ca.1570-90</p>
+                <p class="image-label">Lucio Piccinino, <i>Armour of Alfonso II D’Este, Duke of Ferrara</i>, 1570-90</p>
             </div>
         </div>
 
